--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,9 +18,9 @@
 <div th:replace="general :: page-header"></div>
 
 <div class="indent">
-    <h3 class="text-center">KЛаалалалала</h3>
+    <h3 class="text-center">Биллинговая база оператора связи</h3>
     <br>
-    <span class="text-center indent"> Сайт позволяет добавлять, редактировать, удалять и получать структурированное представление информации о родственных связях </span>
+    <span class="text-center indent"> Система управления информацией о клиентах, оказываемых им услугах и об оплате услуг. </span>
     <br>
 
     <div th:replace="general :: site-footer"></div>
