--- a/src/main/resources/templates/personalAccounts.html
+++ b/src/main/resources/templates/personalAccounts.html
@@ -17,7 +17,7 @@
 <div th:replace="general :: page-header"> </div>
 
 <div class="indent">
-    <form method="get" action="/editPerson">
+    <form method="get" action="/editPersonalAccount">
         <button id="addPersonButton" type="submit" class="btn btn-primary">Добавить клиента</button>
     </form>
     <br>
@@ -38,21 +38,21 @@
         </tr>
         <tr th:each="client : ${clients}">
             <td>
-                <a th:href="'/clients?clientsId=' + ${client.getId()}">
+                <span th:text="${client.getTypeOfClint()}"> </span>
+            </td>
+            <td>
+                <a th:href="'/personalAccount?clientId=' + ${client.getId()}">
                     <span th:text="${client.getName()}"> </span>
                 </a>
             </td>
             <td>
-                <span th:text="${client.getName()}"> </span>
+                <span th:text="${client.getMiddleName()}"> </span>
             </td>
             <td>
-                <span th:text="${client.getName()}"> </span>
+                <span th:text="${client.getSurname()}"> </span>
             </td>
             <td>
-                <span th:text="${client.getName()}"> </span>
-            </td>
-            <td>
-                <span th:text="${client.getName()}"> </span>
+                <span th:text="${client.getEmail()}"> </span>
             </td>
         </tr>
 
