--- a/src/main/resources/templates/errorPage.html
+++ b/src/main/resources/templates/errorPage.html
@@ -1,12 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <style>
+        .indent {
+            margin-left: 30px;
+            margin-right: 30px;
+            margin-top: 20px;
+        }
+    </style>
+    <title>Ошибка</title>
 </head>
+
 <body>
+
+<div th:replace="general :: page-header"> </div>
+
 <div class="indent">
-  <div id="error">
+  <div id="errorPage">
     <h4 th:text="'Ошибка!'"></h4>
     <p  th:text="'Упс... :('"></p>
 
@@ -17,5 +30,7 @@
   <!--end of button group-->
 
 </div>
+<div th:replace="general :: site-footer"></div>
+<div th:replace="general :: site-script"></div>
 </body>
 </html>
