--- a/src/main/resources/templates/service.html
+++ b/src/main/resources/templates/service.html
@@ -26,6 +26,7 @@
     <p th:if="${service.getSms() != null}" th:text="'SMS: ' + ${service.getSms()}"></p>
     <p th:if="${service.getInternet() != null}" th:text="'Интернет: ' + ${service.getInternet()} + ' Гб' "></p>
     <p th:if="${service.getTariffFee() != null}" th:text="'Стоимость: ' + ${service.getTariffFee()} + ' рублей/месяц' "></p>
+    <p th:if="${service.getMaxCredit() != null}" th:text="'Макисмальный кредит: ' + ${service.getMaxCredit()} + ' рублей' "></p>
 
   </div>
 
