--- a/src/main/resources/templates/contractHistory.html
+++ b/src/main/resources/templates/contractHistory.html
@@ -19,8 +19,8 @@
 <div class="indent">
   <br>
 
-  <table class="table table-bordered table-warning">
-    <thead class="thead-dark">
+  <table class="table table-bordered">
+    <thead class="table-success">
     <tr>
       <th scope="col"> id договора </th>
       <th scope="col"> Клиент </th>
