--- a/src/main/resources/templates/personalAccounts.html
+++ b/src/main/resources/templates/personalAccounts.html
@@ -22,8 +22,8 @@
     </form>
     <br>
 
-    <table class="table table-bordered table-warning">
-        <thead class="thead-dark">
+    <table class="table table-bordered">
+        <thead class="table-success">
         <tr>
             <th scope="col"> Тип клиента </th>
             <th scope="col"> Имя/Название </th>
