--- a/src/main/resources/templates/general.html
+++ b/src/main/resources/templates/general.html
@@ -2,10 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style>
+
         .indent {
+            color: aquamarine;
             margin-left: 30px;
             margin-right: 30px;
             margin-top: 20px;
@@ -16,7 +18,7 @@
 <body>
 
 <!--page header-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="page-header">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success" th:fragment="page-header">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
