--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -18,6 +18,10 @@
 
 <div class="indent">
   <br>
+  <form method="get" action="/editService">
+    <button id="addServiceButton" type="submit" class="btn btn-primary">Добавить услугу</button>
+  </form>
+  <br>
 
   <table class="table table-bordered">
     <thead class="table-success">
