--- a/src/main/resources/templates/editService.html
+++ b/src/main/resources/templates/editService.html
@@ -39,7 +39,7 @@
     <label for="serviceTariffFee">Стоимость:</label>
     <input type="text" id="serviceTariffFee" name="serviceTariffFee" required th:value="${service.getTariffFee()}"><br><br>
 
-    <label for="serviceMaxCredit">Макисмальный кредит:</label>
+    <label for="serviceMaxCredit">Максимальный кредит:</label>
     <input type="text" id="serviceMaxCredit" name="serviceMaxCredit" required th:value="${service.getMaxCredit()}"><br><br>
 
     <input id="submitButton" type="submit" value="Сохранить" class="btn btn-primary">
